# JediAcademyLinux

./: .gitmodules  BUILD.md  CMakeLists.txt  README.md  README.txt
binary/base/: assets4.pk3
binary/linux/: jasphmd
binary/linux_i386/: jasphmd
code/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.16  starwars.cbp  starwars.layout
code/RMG/: RM_Area.cpp  RM_Headers.h  RM_Instance.cpp  RM_InstanceFile.cpp  RM_Instance_BSP.cpp  RM_Instance_Group.cpp  RM_Instance_Random.cpp  RM_Instance_Void.cpp  RM_Manager.cpp  RM_Mission.cpp  RM_Objective.cpp  RM_Path.cpp  RM_Path.h  RM_Terrain.cpp
code/Ragl/: graph_region.h  graph_vs.h  ragl_common.h
code/Ratl/: bits_vs.h  handle_pool_vs.h  map_vs.h  pool_vs.h  queue_vs.h  ratl.cpp  ratl_common.h  stack_vs.h  vector_vs.h
code/Release/: .gitignore  jasp
code/Rufl/: hfile.cpp  hstring.cpp
code/cgame/: FX_Blaster.cpp  FX_BryarPistol.cpp  FxPrimitives.cpp  FxScheduler.cpp  FxScheduler.h  cg_camera.cpp  cg_credits.cpp  cg_draw.cpp  cg_effects.cpp  cg_ents.cpp  cg_event.cpp  cg_info.cpp  cg_local.h  cg_main.cpp  cg_media.h  cg_players.cpp  cg_predict.cpp  cg_public.h  cg_scoreboard.cpp  cg_syscalls.cpp  cg_view.cpp  cg_weapons.cpp
code/client/: cl_cgame.cpp  cl_cin.cpp  cl_input.cpp  cl_keys.cpp  cl_main.cpp  cl_mp3.cpp  cl_scrn.cpp  cl_ui.cpp  client.h  fffx.h  snd_ambient.cpp  snd_dma.cpp  snd_local.h  snd_mem.cpp  snd_mix.cpp  snd_music.cpp  vmachine.cpp  vmachine.h
code/client/OpenAL/: al.h  alc.h
code/game/: .gitignore  AI_Animal.cpp  AI_AssassinDroid.cpp  AI_Atst.cpp  AI_BobaFett.cpp  AI_Civilian.cpp  AI_Default.cpp  AI_Droid.cpp  AI_GalakMech.cpp  AI_Grenadier.cpp  AI_HazardTrooper.cpp  AI_Howler.cpp  AI_ImperialProbe.cpp  AI_Interrogator.cpp  AI_Jedi.cpp  AI_Mark1.cpp  AI_Mark2.cpp  AI_MineMonster.cpp  AI_Rancor.cpp  AI_Remote.cpp  AI_RocketTrooper.cpp  AI_SandCreature.cpp  AI_Seeker.cpp  AI_Sentry.cpp  AI_Sniper.cpp  AI_Stormtrooper.cpp  AI_Tusken.cpp  AI_Utils.cpp  AI_Wampa.cpp  AnimalNPC.cpp  FighterNPC.cpp  G_Timer.cpp  NPC.cpp  NPC_behavior.cpp  NPC_combat.cpp  NPC_goal.cpp  NPC_move.cpp  NPC_reactions.cpp  NPC_senses.cpp  NPC_spawn.cpp  (+66 more)
code/ghoul2/: G2_API.cpp  G2_bones.cpp  G2_misc.cpp  ghoul2_gore.h
code/hmd/: ClientHmd.cpp  ClientHmd.h  FactoryHmdDevice.cpp  FactoryHmdDevice.h  GameHmd.cpp  GameHmd.h  SearchForDisplay.cpp  SearchForDisplay.h
code/hmd/HmdDevice/: HmdDeviceMouse.cpp  HmdDeviceMouse.h  HmdDeviceOculusSdk.cpp  HmdDeviceOculusSdk.h  HmdDeviceOculusSdkWin.cpp  HmdDeviceOculusSdkWin.h  HmdDeviceOpenHmd.cpp  HmdDeviceOpenHmd.h  IHmdDevice.h
code/hmd/HmdRenderer/: HmdRendererOculus.cpp  HmdRendererOculus.h  HmdRendererOculusOpenHmd.cpp  HmdRendererOculusOpenHmd.h  HmdRendererOculusSdk.cpp  HmdRendererOculusSdk.h  HmdRendererOculusSdkWin.cpp  HmdRendererOculusSdkWin.h  IHmdRenderer.h  PlatformInfo.h  RenderTool.cpp  RenderTool.h
code/hmd/LibOvrDynamic/: oculus_dynamic.cpp  oculus_dynamic.h  oculus_static.h  ovr_dynamic_funcs.h
code/hmd/OculusSdk_0.5/: HmdDeviceOculusSdk.cpp  HmdDeviceOculusSdk.h  HmdRendererOculusSdk.cpp  HmdRendererOculusSdk.h  oculus_dynamic.h  ovr_dynamic_funcs.h
code/hmd/OculusSdk_0.6/: HmdDeviceOculusSdk.h  HmdRendererOculusSdk.cpp  HmdRendererOculusSdk.h
code/hmd/OculusSdk_1/: HmdRendererOculusSdk.cpp  oculus_static.h  ovr_dynamic_funcs.h
code/hmd/OculusSdk_current/: HmdDeviceOculusSdk.cpp  HmdDeviceOculusSdk.h  HmdRendererOculusSdk.cpp  HmdRendererOculusSdk.h  oculus_dynamic.cpp  oculus_dynamic.h
code/hmd/Quake3/: GameMenuHmdManager.cpp  GameMenuHmdManager.h  ViewParamsHmdUtility.cpp  ViewParamsHmdUtility.h
code/icarus/: BlockStream.cpp  IcarusImplementation.cpp  IcarusImplementation.h  Sequence.cpp  Sequencer.cpp  StdAfx.h  TaskManager.cpp
code/jpeg-6/: jinclude.h  jmorecfg.h
code/linux/: linux_gamma.cpp  linux_glimp.cpp  linux_glw.h  linux_joystick.cpp  linux_local.h  linux_main.cpp  linux_qgl.cpp
code/mac/: mac_game_lib.cpp  mac_local_sdl.h  mac_main_sdl.cpp
code/mp3code/: l3.h  small_header.h  towave.c
code/png/: png.cpp
code/qcommon/: cm_draw.cpp  cm_draw.h  cm_landscape.h  cm_load.cpp  cm_local.h  cm_patch.cpp  cm_patch.h  cm_shader.cpp  cm_terrainmap.cpp  cm_terrainmap.h  cm_trace.cpp  common.cpp  files.h  files_common.cpp  files_pc.cpp  hstring.h  qcommon.h  qfiles.h  stringed_ingame.cpp  stv_version.h  timing.h  tri_coll_test.cpp  unzip.cpp
code/renderer/: matcomp.c  qgl.h  qgl_linked.h  tr_WorldEffects.cpp  tr_animation.cpp  tr_arioche.cpp  tr_backend.cpp  tr_cmds.cpp  tr_draw.cpp  tr_font.cpp  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_local.h  tr_main.cpp  tr_mesh.cpp  tr_model.cpp  tr_quicksprite.cpp  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_shadows.cpp  tr_sky.cpp  tr_surface.cpp  tr_surfacesprites.cpp  tr_types.h
code/sdl/: sdl_console.cpp  sdl_gamma.cpp  sdl_glimp.cpp  sdl_glw.h  sdl_local.h  sdl_qgl.cpp  sdl_snddma.cpp
code/server/: sv_ccmds.cpp  sv_game.cpp  sv_init.cpp  sv_main.cpp  sv_savegame.cpp  sv_snapshot.cpp  sv_world.cpp
code/ui/: gameinfo.cpp  gameinfo.h  ui_main.cpp  ui_public.h  ui_saber.cpp  ui_shared.cpp  ui_shared.h
code/win32/: win_main.cpp  win_wndproc.cpp
code/zlib32/: deflate.cpp
